--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/pfe
+spring.datasource.url=jdbc:mysql://localhost:3306/pfe?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
