--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=create-drop
-bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+bezkoder.app.jwtSecret=bezKoderSecretKey
+bezkoder.app.jwtExpirationMs=86400000
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=lyna.khaznaji@gmail.com
@@ -15,5 +15,3 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
-
-
