--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 bezkoder.app.jwtSecret=bezKoderSecretKey
 bezkoder.app.jwtExpirationMs=86400000
 spring.mail.host=smtp.gmail.com
