--- a/JenkinsFile
+++ b/JenkinsFile
@@ -14,7 +14,7 @@ stages {
     }
     }
 
-   stage("MOCKITO") {
+  /* stage("MOCKITO") {
           steps {
         sh "mvn test -Dtest=com.example.backend.services.BilanAnnuelServiceImpMock"
                     sh "mvn test -Dtest=com.example.backend.services.CandidatureServiceImplMock"
@@ -49,7 +49,7 @@ stage('MVN NEXUS')
 
                   sh 'mvn  deploy -DskipTests  '
 
-                  }}
+                  }}*/
 
 
  stage("BUILD DOCKER IMAGE") {
