--- a/JenkinsFile
+++ b/JenkinsFile
@@ -59,6 +59,8 @@ stage('MVN NEXUS')
                sh 'docker build -t khaznaji/stagepfe:latest .'
                git branch: 'master', url: 'https://github.com/khaznaji/StagePFE_Front.git'
                sh 'docker build -t khaznaji/stagepfefront:latest -f Dockerfile .'
+                git branch: 'master', url: 'https://github.com/khaznaji/Cv-Matching.git'
+                sh 'docker build -t khaznaji/stagepfefrontpython:latest -f Dockerfile .'
 
              }
            }
@@ -68,6 +70,7 @@ stage('MVN NEXUS')
                                 sh 'docker login -u "khaznaji" -p "191JFT2725" docker.io'
                                 sh 'docker push khaznaji/stagepfe:latest'
                                 sh 'docker push khaznaji/stagepfefront:latest'
+                                 sh 'docker push khaznaji/stagepfefrontpython:latest'
                         }
                     }}
 
