--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,14 @@ services:
           - "4200:4200"
       depends_on:
           - Backend
+  python-app:
+    image: khaznaji/stagepfefrontpython:latest
+    container_name: python
+    restart: on-failure
+    ports:
+      - "5000:5000"
+    depends_on:
+      - Backend
 networks:
   test:
     driver: bridge
