--- a/JenkinsFile
+++ b/JenkinsFile
@@ -53,7 +53,7 @@ stage('MVN NEXUS')
                   }}*/
 
 
- stage("BUILD DOCKER IMAGE") {
+ /*stage("BUILD DOCKER IMAGE") {
              steps {
 
                sh 'docker build -t khaznaji/stagepfe:latest .'
@@ -73,10 +73,13 @@ stage('MVN NEXUS')
                                  sh 'docker push khaznaji/stagepfefrontpython:latest'
                         }
                     }}
-
+*/
                stage('docker compose') {
                    steps{
                     /*   sh 'docker compose down --rmi all'*/
+                      sh 'ls -l'
+                       // Vérifier que le fichier docker-compose.yml est présent
+                     sh 'cat docker-compose.yml'
                        sh 'docker compose up -d'
                    }
                }
