--- a/JenkinsFile
+++ b/JenkinsFile
@@ -52,18 +52,28 @@ stage('MVN NEXUS')
 
                   }}*/
 
-
  stage("BUILD DOCKER IMAGE") {
-             steps {
+            steps {
+                script {
+                    // Stocker le répertoire actuel
+                    env.ORIGINAL_DIR = sh(script: 'pwd', returnStdout: true).trim()
 
-               sh 'docker build -t khaznaji/stagepfe:latest .'
-               git branch: 'master', url: 'https://github.com/khaznaji/StagePFE_Front.git'
-               sh 'docker build -t khaznaji/stagepfefront:latest -f Dockerfile .'
-                git branch: 'master', url: 'https://github.com/khaznaji/Cv-Matching.git'
-                sh 'docker build -t khaznaji/stagepfefrontpython:latest -f Dockerfile .'
+                    // Construire les images Docker
+                    sh 'docker build -t khaznaji/stagepfe:latest .'
+                    sh 'git clone https://github.com/khaznaji/StagePFE_Front.git'
+                    dir('StagePFE_Front') {
+                        sh 'docker build -t khaznaji/stagepfefront:latest -f Dockerfile .'
+                    }
+                    sh 'git clone https://github.com/khaznaji/Cv-Matching.git'
+                    dir('Cv-Matching') {
+                        sh 'docker build -t khaznaji/stagepfefrontpython:latest -f Dockerfile .'
+                    }
 
-             }
-           }
+                    // Revenir au répertoire initial
+                    sh "cd ${env.ORIGINAL_DIR}"
+                }
+            }
+        }
        stage('docker push'){
                         steps{
                             script{
@@ -73,16 +83,20 @@ stage('MVN NEXUS')
                                  sh 'docker push khaznaji/stagepfefrontpython:latest'
                         }
                     }}
-
-               stage('docker compose') {
-                   steps{
-                    /*   sh 'docker compose down --rmi all'*/
-                      sh 'ls -l'
-                       // Vérifier que le fichier docker-compose.yml est présent
-                     sh 'cat docker-compose.yml'
-                       sh 'docker compose up -d'
-                   }
-               }
+  stage('docker compose') {
+            steps {
+                script {
+                    // Afficher le répertoire de travail actuel
+                    sh 'pwd'
+                    // Afficher le contenu du répertoire courant
+                    sh 'ls -l'
+                    // Vérifier que le fichier docker-compose.yml est présent
+                    sh 'cat docker-compose.yml'
+                    // Utiliser docker-compose pour démarrer les services
+                    sh 'docker-compose up -d'
+                }
+            }
+        }
 
 
 }}
