--- a/JenkinsFile
+++ b/JenkinsFile
@@ -60,11 +60,11 @@ stage('MVN NEXUS')
 
                     // Construire les images Docker
                     sh 'docker build -t khaznaji/stagepfe:latest .'
-                    git branch: 'master', url: 'git https://github.com/khaznaji/StagePFE_Front.git'
+                    git branch: 'master', url: 'https://github.com/khaznaji/StagePFE_Front.git'
 
 
                         sh 'docker build -t khaznaji/stagepfefront:latest -f Dockerfile .'
-                    git branch: 'master', url: 'git https://github.com/khaznaji/Cv-Matching.git'
+                    git branch: 'master', url: 'https://github.com/khaznaji/Cv-Matching.git'
 
                         sh 'docker build -t khaznaji/stagepfefrontpython:latest -f Dockerfile .'
 
