--- a/JenkinsFile
+++ b/JenkinsFile
@@ -60,14 +60,14 @@ stage('MVN NEXUS')
 
                     // Construire les images Docker
                     sh 'docker build -t khaznaji/stagepfe:latest .'
-                    git branch: 'master', url: 'https://github.com/khaznaji/StagePFE_Front.git'
-
-
+                    sh 'git clone https://github.com/khaznaji/StagePFE_Front.git'
+                    dir('StagePFE_Front') {
                         sh 'docker build -t khaznaji/stagepfefront:latest -f Dockerfile .'
-                    git branch: 'master', url: 'https://github.com/khaznaji/Cv-Matching.git'
-
+                    }
+                    sh 'git clone https://github.com/khaznaji/Cv-Matching.git'
+                    dir('Cv-Matching') {
                         sh 'docker build -t khaznaji/stagepfefrontpython:latest -f Dockerfile .'
-
+                    }
 
                     // Revenir au répertoire initial
                     sh "cd ${env.ORIGINAL_DIR}"
