--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/pfe?useUnicode=true&useJDBCCom
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 bezkoder.app.jwtSecret=bezKoderSecretKey
 bezkoder.app.jwtExpirationMs=86400000
 spring.mail.host=smtp.gmail.com
