adr ip  test 1.4

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -57,10 +57,9 @@
                   script {
                       // Store the current directory
                       env.ORIGINAL_DIR = sh(script: 'pwd', returnStdout: true).trim()
+     git branch: 'main', url: 'https://github.com/khaznaji/Cv-Matching.git'
+     sh 'docker build -t khaznaji/stagepfefrontpython:latest -f Dockerfile .'
 
-                      sh 'git clone https://github.com/khaznaji/Cv-Matching.git'
-
-                         sh 'docker build -t khaznaji/stagepfefrontpython:latest -f Dockerfile .'
 
                       // Build the Docker image for the main project
                       sh 'docker build -t khaznaji/stagepfe:latest .'
