--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     ports:
       - "5000:5000"
     depends_on:
-      - mysqldb
+      - Backend
 networks:
   test:
     driver: bridge
